[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrogenline"
authors = [
    {name = "ON5VO", email = "contact@on5vo.be"},
]
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.3"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tzlocal",
    "pyrtlsdr[lib]",
    "libusb",
]

[project.scripts]
capture = "scripts.capture:main"
waterfall = "scripts.waterfall:main"
reference = "scripts.reference:main"
spectra = "scripts.spectra:main"

[project.urls]
"Homepage" = "https://www.on5vo.be/html/radio/hydrogenline.html"
"Documentation" = "https://github.com/on5vo/hydrogenline/blob/main/README.md"
"Repository" = "https://github.com/on5vo/hydrogenline"
"Download" = "https://github.com/on5vo/hydrogenline/releases"